--- a/GroupLockApplication/app/src/main/res/layout/toolbar.xml
+++ b/GroupLockApplication/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +8,10 @@
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
         android:id="@+id/toolbar"
         android:background="@color/colorToolbar"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:layout_height="70dip">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -47,22 +48,6 @@
             <ImageView
                 android:layout_width="64dp"
                 android:layout_height="match_parent"
-                android:id="@+id/imageInfo"
-                android:src="@drawable/ic_info_outline_white_24dp"
-                android:baselineAlignBottom="false"
-                android:layout_gravity="right"
-                android:clickable="false"
-                android:adjustViewBounds="false"
-                android:contextClickable="false"
-                android:cropToPadding="false"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:visibility="visible"
-                android:onClick="showInfo" />
-
-            <ImageView
-                android:layout_width="64dp"
-                android:layout_height="match_parent"
                 android:id="@+id/buttonBack"
                 android:src="@drawable/ic_arrow_back_white_24dp"
                 android:baselineAlignBottom="false"
@@ -73,6 +58,23 @@
                 android:onClick="goBack"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true" />
+
+            <ImageView
+                android:layout_width="64dp"
+                android:layout_height="match_parent"
+                android:id="@+id/imageInfo"
+                android:src="@android:drawable/ic_menu_help"
+                android:baselineAlignBottom="false"
+                android:layout_gravity="right"
+                android:clickable="false"
+                android:adjustViewBounds="false"
+                android:contextClickable="false"
+                android:cropToPadding="false"
+                android:visibility="visible"
+                android:onClick="showInfo"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
